updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hey, I'm Parisa. I'm currently a Physical Therapist Assistant and looking to change things up. /p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I play beach volleyball probably way too much and love playing the guitar and singing as well.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>No job at all? Is that an option. But no, my dream job right now would simply to be in a place where working just felt like pure joy.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Carlsbad, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been surrounded by software engineers my whole life and I always found a lot of interest in it but never took the plunge, so here I am. </p>
     </section>
 
     <footer id="footer">
