--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hey, I'm Parisa. I'm currently a Physical Therapist Assistant and looking to change things up. /p>
+      <p>Hey, I'm Parisa. I'm currently a Physical Therapist Assistant and looking to change things up. </p>
       <h1>Where I'm From</h1>
       <p>San Diego, CA</p>
       <h1>What are your favorite hobbies?</h1>
